--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700;800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Roboto', sans-serif; background-color: #f4f4f9; }
-        h1, h2, h3, h4 { font-family: 'Roboto Slab', serif; }
+        body { 
+            font-family: 'Roboto', sans-serif; 
+            background-color: #f4f4f9; 
+        }
+        h1, h2, h3, h4 { 
+            font-family: 'Roboto Slab', serif; 
+        }
         .news-card {
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
             border: 1px solid #e2e8f0;
@@ -29,8 +34,7 @@
 
     <main id="news-container" class="container mx-auto px-4 py-8">
         <div id="loading" class="text-center py-12">
-            <h2 class="text-2xl font-semibold text-gray-700">Buscando e analisando as últimas notícias...</h2>
-            <p class="text-gray-500">Este processo utiliza IA e pode levar alguns instantes.</p>
+            <h2 class="text-2xl font-semibold text-gray-700">Carregando as últimas notícias...</h2>
         </div>
         </main>
 
@@ -44,20 +48,23 @@
 
         async function fetchAndRenderNews() {
             try {
-                const response = await fetch('/api/fetch-news');
+                // Esta linha foi atualizada para chamar a API que lê do banco de dados.
+                const response = await fetch('/api/get-news'); 
+
                 if (!response.ok) {
-                    throw new Error('Não foi possível buscar as notícias. A API pode estar ocupada.');
+                    throw new Error('Não foi possível buscar as notícias.');
                 }
                 const articles = await response.json();
                 
                 loadingDiv.style.display = 'none';
 
                 if (articles.length === 0) {
-                    newsContainer.innerHTML = '<p class="text-center text-gray-600">Nenhuma notícia encontrada no momento. Tente novamente mais tarde.</p>';
+                    newsContainer.innerHTML = '<p class="text-center text-gray-600">Nenhuma notícia encontrada no momento. O robô pode estar atualizando o banco de dados. Tente novamente em breve.</p>';
                     return;
                 }
 
                 articles.forEach(article => {
+                    // Transforma a lista de pontos-chave em itens de HTML <li>
                     const keyPointsHTML = article.aiContent.pontos_chave.map(point => `
                         <li class="mb-2">${point}</li>
                     `).join('');
